[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/menumain.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/paint/stage.gd" type="Script" id=2]
[ext_resource path="res://scene/paint/3dstage.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/paint/ViewportContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/sidebar.tscn" type="PackedScene" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="FileSaveDialog" type="FileDialog" parent="."]
margin_left = 290.0
margin_top = 192.0
margin_right = 749.0
margin_bottom = 517.0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/home/tt/Desktop/working/openCFA5 (copy)"
current_path = "/home/tt/Desktop/working/openCFA5 (copy)/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spatial" parent="." instance=ExtResource( 3 )]

[node name="ViewportContainer" parent="." instance=ExtResource( 4 )]

[node name="SaveButton" type="Button" parent="."]
margin_left = 912.585
margin_top = 44.2665
margin_right = 953.585
margin_bottom = 75.2665
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="."]
margin_left = 964.525
margin_top = 40.8647
margin_right = 1008.52
margin_bottom = 71.8647
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bushsize" type="SpinBox" parent="."]
anchor_left = 0.384
anchor_top = 0.035
anchor_right = 0.558
anchor_bottom = 0.035
margin_left = 924.256
margin_top = 135.185
margin_right = 998.256
margin_bottom = 167.185
min_value = 1.0
max_value = 200.0
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 934.276
margin_top = 175.173
margin_right = 1001.28
margin_bottom = 210.173
text = "Brush sixe
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPickerButton" parent="."]
margin_left = 919.23
margin_top = 87.0168
margin_right = 953.23
margin_bottom = 124.017
color = Color( 0.768627, 0.243137, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuPanel" parent="." instance=ExtResource( 1 )]

[node name="sidebar" parent="." instance=ExtResource( 5 )]
margin_bottom = 562.0

[node name="VBoxContainer" parent="sidebar" index="0"]
margin_bottom = 503.0
[connection signal="confirmed" from="FileSaveDialog" to="." method="_on_FileSaveDialog_confirmed"]
[connection signal="button_up" from="SaveButton" to="." method="_on_SaveButton_button_up"]
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]

[editable path="ViewportContainer"]

[editable path="sidebar"]
